# redesigned-train

./: CMakeLists.txt  README.md  main.cpp
client/: CMakeLists.txt  client.cpp
redesigned-train/: README.md  client.cpp  server.cpp
server/: CMakeLists.txt  server.cpp
server/include/: led_commands.h  led_manager.h
server/sources/: led_commands.cpp  led_manager.cpp
